aruha/team-aruha#2064 Auth plugin: implement logic to allow blocking user admin operations